# MaidSafe-Encrypt

./: .demo.kadconfig  .gitignore  .gitmodules  .kadconfig  0001-all-compiler-warnings-removed-from-the-transport-lay.patch  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  DokanUpdate.README  DoxySfile  Doxyfile  README  README.md  dedup  dokan.exp  dokan.lib  dokan.sys  perpetualvault
docs/: .gitignore  BuildCOnWindowsByUsingCMakeAndNMake.odt  CopyrightLicenses.txt  INSTALL  README  defer.odp  pd.lyx
docs/API/: FS.API  Kademlia.API  Kadmaid.API  Maidsafe.API  Network.API  Transport.API  typedefs
docs/ClassDiagrams/: KademliaClassesDiagram.xmi  TransportClassesDiagram.xmi
docs/MaidSafe Technical Papers/: Authentication.lyx  AutonomousNetwork.lyx  DistributedFileSystem.lyx  Encryption.lyx  MaidSafeDistributedFileSystem.lyx  ManagedAuthentication.lyx  PeerToPeerPublicKeyInfrastructure.lyx  SelfAuthentication.lyx  SelfEncryptingData.lyx  Validation.lyx  maidsafe-dht-NAT-traversal.lyx  maidsafe-dht-NAT-traversal.tex  maidsafe-dht.lyx  managed-authentication.lyx  pd.lyx
docs/SequenceDiagrams/: DELETE_CHUNK.sdx  GET_CHUNK.sdx  Reference_List_Add.ddd  STORE_NEW_CHUNK.sdx  VALIDITY_CHECK.sdx  Watch_List_Add.ddd  Watch_List_Remove.ddd
docs/seq/: ChunkInfo_Add.ddd  DELETE_CHUNK.sdx  GET_CHUNK.sdx  IOU_MANAGEMENT.sdx  Reference_List_Add.ddd  Reference_List_Remove.ddd  STORE_CHUNK.sdx  STORE_CHUNK.sdx.bak  STORE_EXISTING_CHUNK.sdx  STORE_NEW_CHUNK.sdx  VALIDITY_CHECK.sdx  Watch_List_Add.ddd  Watch_List_Payment.ddd  Watch_List_Remove.ddd  Watchlist_Add.ddd  Watchlist_Remove.ddd
docs/threadpool-0_2_5-doc/: changelog.html  index.html  license.html  pages.html
docs/uml/: .QueryCache  Maidsafe Client_1220620696743.etlp  Maidsafe Client_1220621132227.etld
installer/bitrock/: autoup_client_lslightlocal.xml  autoup_client_pdlightlocal.xml  autoup_ls.xml  autoup_pd.xml  autoup_pdlightlocal.xml  autoup_server_lslightlocal.xml  autoup_server_pdlightlocal.xml  git_tag.sh  lifestuff.xml  lslight.xml  lslightlocal.xml  pd.xml  pdlight.xml  pdlightlocal.xml  pdlightlocal.xml.backup  set_version.bat  update_lslightlocal.ini  update_pdlightlocal.ini
installer/images/: maidsafe_logo.xpm  maidsafe_logo_tick_ok.icns
installer/other/: lifestuff  lifestuff.desktop  lifestuffvault.desktop  lslocal.desktop  pdlocal.desktop  perpetualdatavault.desktop
installer/text/: LICENSE.txt  readme.txt  welcome.txt
patch/: 0001-all-compiler-warnings-removed-from-the-transport-lay.patch
src/: cpplint.py
src/examples/: downloadcalc.cc  downloadcalc.h  downloadcalcoriginal.cc
src/fs/: filesystem.cc  filesystem.h
src/gui/: contact_detail.cc  contact_detail.h  contacts.cc  contacts.h  createsharedialog.cc  createsharedialog.h  cyber_cash.cc  cyber_cash.h  d_add_publicname.cc  d_add_publicname.h  general_login.cc  general_login.h  logged_in.cc  logged_in.h  maidsafe_logo1.xpm  maidsafe_logo_small.xpm  maidsafe_logo_tick_ok.xpm  message_main.cc  message_main.h  message_panel.cc  message_panel.h  mssan_main.cc  mssan_main.h  mssan_management.cc  mssan_management.h  mssan_members.cc  mssan_members.h  pd_logo.xpm  pdguiapp.cc  pdguiapp.h  pdguimain.cc  pdguimain.h  share_panel.cc  share_panel.h  voting.cc  voting.h
src/installerfiles/: EULA_001.txt  README  autoup.xml  chkupdate-linux.sh  pd.xml  update.xml
src/maidsafe/: accountholdersmanager.cc  accountholdersmanager.h  accountstatusmanager.cc  accountstatusmanager.h  bufferpacketrpc.cc  bufferpacketrpc.h  chunkstore.cc  chunkstore.h  clientbufferpackethandler.cc  clientbufferpackethandler.h  config.h  contactcache.cc  contactcache.h  cppsqlite3.cc  cppsqlite3.cc.backup  cppsqlite3.h  crypto.cc  crypto.h  dave.cc  kadops.cc  kadops.h  maidsafe-dht.h  maidsafe-dht_config.h  maidsafe.h  maidsafevalidator.cc  maidsafevalidator.h  opdata.h  pdutils.cc  pdutils.h  returncodes.h  rsakeypair.cc  rsakeypair.h  sqlite3.h  threadpool.cc  threadpool.h  utils.cc  utils.h  vaultbufferpackethandler.cc  vaultbufferpackethandler.h
src/maidsafe-encrypt/: config.h  data_io_handler.h  data_map.h  data_map.proto  file_io_handler.cc  self_encryption.cc  self_encryption.h  self_encryption_device.cc  self_encryption_device.h  self_encryption_stream.cc  self_encryption_stream.h  string_io_handler.cc  utils.cc  utils.h  version.h
src/maidsafe/encrypt/: CMakeLists.txt  byte_array.cc  byte_array.h  cache.cc  cache.h  config.h  data_map.cc  data_map.h  data_map.proto  data_map_encryptor.cc  data_map_encryptor.h  data_map_pb.h  dataiohandler.h  datamap.cc  datamap.proto  drive_store.cc  fileiohandler.cc  log.h  self_encrypt.cc  self_encrypt.h  self_encryption.cc  self_encryption.h  self_encryption_device.cc  self_encryption_device.h  self_encryption_stream.cc  self_encryption_stream.h  self_encryptor.cc  self_encryptor.h  selfencryption.cc  selfencryption.h  selfencryptionconfig.h  selfencryptionutils.cc  selfencryptionutils.h  sequencer.cc  sequencer.h  stringiohandler.cc  test.cc  utils.cc  utils.h  version.h  (+1 more)
src/maidsafe/encrypt/tests/: benchmark.cc  cache_test.cc  data_map_encryptor_test.cc  encrypt_demo.cc  encrypt_demo.xx  encrypt_test_base.h  encrypt_tests_main.cc  massive_self_encryptor_test.xx  self_encryptor_basic_test.cc  self_encryptor_private_member_test.cc  self_encryptor_test.cc  sequencer_test.cc  test_benchmark.cc  test_main.cc  test_se.cc  test_self_encryption.cc  test_self_encryption_device.cc  test_self_encryption_ext.cc  test_self_encryption_stream.cc  test_utils.cc  testdataiohandler.cc  testselfencryption.cc
src/maidsafe/pki/: CMakeLists.txt  maidsafevalidator.cc  maidsafevalidator.h  packet.cc  packet.h
src/maidsafe/pki/tests/: pki_tests_main.cc  testmaidsafevalidator.cc
src/protobuf/: contact_info.pb.cc  contact_info.pb.h  contact_info.proto  datamaps.pb.cc  datamaps.pb.h  datamaps.proto  general_messages.pb.cc  general_messages.pb.h  general_messages.proto  kademlia_service_messages.pb.cc  (+15 more)
uml/: Component Diagram 1_1217588227362.etld  Component Diagram 1_1217588227362.etlp  Maidsafe Client_1220621132227.etlp  UML.etd  UML.ettm  UML.etup
(+973 files in other folders)
